# teloxide

./: .gitignore  .mailmap  .travis.yml  CHANGELOG.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  DPTREE_GUIDE.md  Justfile  LICENSE  MIGRATION_GUIDE.md  README.md  RELEASE_PROCEDURE.md  Readme.md  build.rs  hw.doc  netlify.toml  rust-toolchain.toml  rustfmt.toml  schema.ron  triagebot.toml  typos.toml
crates/teloxide/: Cargo.toml  README.md
crates/teloxide-core/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  custom_v2.json  rust-toolchain.toml  rustfmt.toml  schema.ron
crates/teloxide-core/.cargo/: config.toml
crates/teloxide-core/examples/: erased.rs  self_info.rs
crates/teloxide-core/src/: adaptors.rs  bot.rs  codegen.rs  errors.rs  lib.rs  local_macros.rs  net.rs  payloads.rs  requests.rs  types.rs  util.rs
crates/teloxide-core/src/adaptors/: auto_send.rs  cache_me.rs  erased.rs  parse_mode.rs  throttle.rs  trace.rs
crates/teloxide-core/src/bot/: api.rs  download.rs
crates/teloxide-core/src/codegen/: convert.rs  patch.rs  schema.rs  schema_check.rs
crates/teloxide-core/src/net/: download.rs  request.rs  telegram_response.rs
crates/teloxide-core/src/payloads/: add_sticker_to_set.rs  answer_callback_query.rs  answer_inline_query.rs  answer_pre_checkout_query.rs  answer_shipping_query.rs  answer_web_app_query.rs  approve_chat_join_request.rs  approve_suggested_post.rs  ban_chat_member.rs  ban_chat_sender_chat.rs  close_forum_topic.rs  close_general_forum_topic.rs  codegen.rs  convert_gift_to_stars.rs  copy_message.rs  copy_messages.rs  create_chat_invite_link.rs  create_chat_subscription_invite_link.rs  create_forum_topic.rs  create_invoice_link.rs  create_new_sticker_set.rs  decline_chat_join_request.rs  decline_suggested_post.rs  delete_business_messages.rs  delete_chat_photo.rs  delete_forum_topic.rs  delete_messages.rs  delete_my_commands.rs  delete_sticker_from_set.rs  delete_sticker_set.rs  delete_story.rs  delete_webhook.rs  edit_chat_invite_link.rs  edit_chat_subscription_invite_link.rs  edit_forum_topic.rs  edit_general_forum_topic.rs  edit_message_caption.rs  edit_message_caption_inline.rs  edit_message_checklist.rs  edit_message_live_location.rs  (+117 more)
crates/teloxide-core/src/requests/: json.rs  multipart.rs  multipart_payload.rs  request.rs  requester.rs  requester_ext.rs  utils.rs
crates/teloxide-core/src/serde_multipart/: error.rs  mod.rs  serializers.rs  unserializers.rs
crates/teloxide-core/src/types/: accepted_gift_types.rs  allowed_update.rs  animation.rs  audio.rs  background_fill.rs  background_type.rs  birthdate.rs  bot_command.rs  bot_command_scope.rs  bot_description.rs  bot_name.rs  bot_short_description.rs  business_bot_rights.rs  business_connection.rs  business_connection_id.rs  business_intro.rs  business_location.rs  business_messages_deleted.rs  business_opening_hours.rs  business_opening_hours_interval.rs  callback_game.rs  callback_query.rs  chat.rs  chat_administrator_rights.rs  chat_background.rs  chat_boost.rs  chat_boost_added.rs  chat_boost_removed.rs  chat_boost_source.rs  chat_boost_updated.rs  chat_full_info.rs  chat_id.rs  chat_invite_link.rs  chat_join_request.rs  chat_location.rs  chat_member.rs  chat_member_updated.rs  chat_permissions.rs  chat_photo.rs  chat_shared.rs  (+169 more)
crates/teloxide-macros/: CHANGELOG.md  Cargo.toml  rustfmt.toml
crates/teloxide-macros/src/: attr.rs  bot_commands.rs  build_keyboard.rs  button.rs  button_attr.rs  button_enum.rs  command.rs  command_attr.rs  command_enum.rs  error.rs  fields_parse.rs  fields_stringify.rs  inline_buttons.rs  lib.rs  rename_rules.rs  unzip.rs
crates/teloxide-macros/tests/: command.rs
crates/teloxide/examples/: README.md  admin.rs  axum_shared_server.rs  buttons.rs  chat_member_updates.rs  command.rs  composite_state.rs  db_remember.rs  deep_linking.rs  dispatching_features.rs  error_handler.rs  heroku_ping_pong.rs  inline.rs  inline_buttons_enum.rs  inline_keyboard_enum.rs  middlewares.rs  middlewares_fallible.rs  ngrok_ping_pong.rs  purchase.rs
crates/teloxide/src/: backoff.rs  backoff_strategy.rs  dispatching.rs  error_handlers.rs  features.md  lib.rs  prelude.rs  repls.rs  stop.rs  sugar.rs  update_listeners.rs  utils.rs
crates/teloxide/src/dispatching/: dialogue.rs  dispatcher.rs  filter_ext.rs  handler_description.rs  handler_ext.rs  repls.rs  tracing.rs
crates/teloxide/src/repls/: commands_repl.rs  repl.rs
crates/teloxide/src/sugar/: bot.rs  request.rs
crates/teloxide/src/update_listeners/: polling.rs  webhooks.rs  (+1 more)
crates/teloxide/tests/: buttons.rs  callback_data.rs  command.rs  errors.rs  inline_keyboard_enum.rs  postgres.rs  redis.rs  sqlite.rs
examples/admin_bot/: Cargo.toml
examples/admin_bot/src/: main.rs
examples/dialogue_bot/: Cargo.toml
examples/dialogue_bot/src/: favourite_music.rs  main.rs  states.rs  transitions.rs
examples/dialogue_bot_redis/: Cargo.toml
examples/dialogue_bot_redis/src/: main.rs
examples/dices_bot/: Cargo.toml
examples/dices_bot/src/: main.rs
examples/dispatching2_features/: Cargo.toml
examples/dispatching2_features/src/: main.rs
examples/guess_a_number_bot/: Cargo.toml
examples/guess_a_number_bot/src/: main.rs  states.rs  transitions.rs
examples/heroku_ping_pong_bot/: Cargo.toml  Procfile  README.md
examples/heroku_ping_pong_bot/src/: main.rs
examples/ngrok_ping_pong_bot/: Cargo.toml
examples/ngrok_ping_pong_bot/src/: main.rs
examples/ping_pong_bot/: Cargo.toml
examples/ping_pong_bot/src/: main.rs
examples/redis_remember_bot/: Cargo.toml
examples/redis_remember_bot/src/: main.rs  states.rs  transitions.rs
examples/shared_state_bot/: Cargo.toml
examples/shared_state_bot/src/: main.rs
examples/simple_commands_bot/: Cargo.toml
examples/simple_commands_bot/src/: main.rs
examples/simple_fsm/: Cargo.toml
examples/simple_fsm/src/: main.rs
examples/sqlite_remember_bot/: Cargo.toml  db.sqlite-journal  sqlite.db  sqlite.db-shm  sqlite.db-wal
examples/sqlite_remember_bot/src/: main.rs  states.rs  transitions.rs
micro-teloxide/: Cargo.toml
micro-teloxide/src/: lib.rs
(+940 files in other folders)
