[package]
name = "micro-teloxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide-macros = { path = ".." }
serde = { version = "1.0.145", features = ["derive"] }
serde_with_macros = "1.5.2"
