[package]
name = "teloxide-macros"
version = "0.7.0"
description = "The teloxide's procedural macros"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.19"
syn = { version = "1.0.13",  features = ["full"] }
heck = "0.4.0"
