[package]
name = "teloxide-macros"
version = "0.7.1"
description = "The teloxide's procedural macros"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

documentation = "https://docs.rs/teloxide-core/"
# FIXME: add a simple readme for teloxide-macros
#readme = "README.md"


[lib]
proc-macro = true


[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.19"
syn = { version = "1.0.13",  features = ["full"] }
heck = "0.4.0"
