[package]
name = "dialogue_bot"
version = "0.1.0"
authors = ["Temirkhan Myrzamadi <hirrolot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
tokio = "0.2.9"

frunk = "0.3.1"
frunk_core = "0.3.1"

pretty_env_logger = "0.4.0"
futures = "0.3.5"
derive_more = "0.99.9"
teloxide = { path = "../../", features = ["frunk"] }
teloxide-macros = "0.3.2"

[profile.release]
lto = true
