[package]
name = "dialogue_bot"
version = "0.1.0"
authors = ["Temirkhan Myrzamadi <hirrolot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { path = "../../", features = ["frunk", "macros", "sqlite-storage"] }
anyhow = "1.0.52"
serde = "1"

tokio = { version =  "1.3.0", features = ["rt-multi-thread", "macros"] }

log = "0.4.8"
pretty_env_logger = "0.4.0"

[profile.release]
lto = true
